--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-time-ago": "^7.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
