--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "daisyui": "^2.46.1",
     "dotenv": "^16.0.3",
     "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
