configure cookies via .env

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,4 +3,7 @@ PORT=8080
 TWITTER_BEARER_TOKEN=
 GO_TRANSIT_API_KEY=
 MONGO_URL=
-FRONTEND_URL=
+FRONTEND_URL="http://localhost:3000"
+SESSION_SECRET="your secret"
+SESSION_SAMESITE="lax"
+SESSION_SECURE=false
